tests/invalid/purity/impure_func_t3.err_exp
impure_func_t3.m:017: In call to impure function
impure_func_t3.m:017:   `impure_func_t3.get_counter'/0:
impure_func_t3.m:017:   purity error: call must be in an explicit unification
impure_func_t3.m:017:   which is preceded by `impure' indicator.
impure_func_t3.m:017: In call to predicate `io.print'/3:
impure_func_t3.m:017:   warning: unnecessary `impure' indicator.
impure_func_t3.m:017:   No purity indicator is necessary.
